apps/staging/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - paperless-ngx.christophervestman.com
      secretName: paperless-ngx-tls
  rules:
    - host: paperless-ngx.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
            path: /
            pathType: Prefix
